removed the main method in the diferent shape classes and also finish the ShapeArray class. I also used the rectangle shape to play the role of the square since this project didn't make that class.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "ShapeArray",
+            "request": "launch",
+            "mainClass": "CTA4.ShapeArray",
+            "projectName": "CSC372_c6ccd789"
+        },
+        {
+            "type": "java",
             "name": "Triangle",
             "request": "launch",
             "mainClass": "CTA4.Triangle",
