--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,6 @@
     "c:\\Users\\Paynt\\Documents\\JAVA_HOME\\javafx-sdk-20.0.2\\lib\\javafx.swing.jar",
     "c:\\Users\\Paynt\\Documents\\JAVA_HOME\\javafx-sdk-20.0.2\\lib\\javafx.web.jar",
     "c:\\Users\\Paynt\\Documents\\JAVA_HOME\\javafx-sdk-20.0.2\\lib\\javafx-swt.jar"
-  ]
+  ],
+  "github.gitProtocol": "ssh"
 }
